# smallangle

./: pyproject.toml
oefenen/: hello.py  oefenen_click.py  pyproject.toml
src/smallangle/: smallangle.py
