[tool.poetry]
name = "oefenen"
version = "0.1.0"
description = ""
authors = ["FemkeFVB <149329792+FemkeFVB@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "oefenen", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
